tests/baselines/reference/classSideInheritance2.errors.txt
tests/cases/compiler/classSideInheritance2.ts(7,23): error TS2449: Class 'TextBase' used before its declaration.


==== tests/cases/compiler/classSideInheritance2.ts (1 errors) ====
    interface IText {
        foo: number;
    }
    
    interface TextSpan {}
    
    class SubText extends TextBase {
                          ~~~~~~~~
!!! error TS2449: Class 'TextBase' used before its declaration.
    
            constructor(text: IText, span: TextSpan) {
                super();
            }
    }
    
    class TextBase implements IText {
            public foo: number;
            public subText(span: TextSpan): IText {
    
                return new SubText(this, span);
            }
    }